--- a/src/sass/theme/_empMain.scss
+++ b/src/sass/theme/_empMain.scss
@@ -1314,35 +1314,35 @@ input[type=checkbox], input[type=radio],input[type=file] {
 }
 
 
-.ui-grid-top-panel {
-  position: relative;
-  overflow: hidden;
-  font-weight: 700;
-  background: #C4C2BE;
-  -webkit-border-top-right-radius: -1px;
-  -webkit-border-bottom-right-radius: 0;
-  -webkit-border-bottom-left-radius: 0;
-  -webkit-border-top-left-radius: -1px;
-  -moz-border-radius-topright: -1px;
-  -moz-border-radius-bottomright: 0;
-  -moz-border-radius-bottomleft: 0;
-  -moz-border-radius-topleft: -1px;
-  border-top-right-radius: -1px;
-  border-bottom-right-radius: 0;
-  border-bottom-left-radius: 0;
-  border-top-left-radius: -1px;
-  -moz-background-clip: padding-box;
-  -webkit-background-clip: padding-box;
-  background-clip: padding-box;
-}
-.ui-grid-cell {
-  overflow: hidden;
-  float: left;
-  background-color: inherit;
-  border-right: 1px solid;
-  border-color: #d4d4d4;
-  box-sizing: border-box;
-}
+// .ui-grid-top-panel {
+//   position: relative;
+//   overflow: hidden;
+//   font-weight: 700;
+//   background: #C4C2BE;
+//   -webkit-border-top-right-radius: -1px;
+//   -webkit-border-bottom-right-radius: 0;
+//   -webkit-border-bottom-left-radius: 0;
+//   -webkit-border-top-left-radius: -1px;
+//   -moz-border-radius-topright: -1px;
+//   -moz-border-radius-bottomright: 0;
+//   -moz-border-radius-bottomleft: 0;
+//   -moz-border-radius-topleft: -1px;
+//   border-top-right-radius: -1px;
+//   border-bottom-right-radius: 0;
+//   border-bottom-left-radius: 0;
+//   border-top-left-radius: -1px;
+//   -moz-background-clip: padding-box;
+//   -webkit-background-clip: padding-box;
+//   background-clip: padding-box;
+// }
+// .ui-grid-cell {
+//   overflow: hidden;
+//   float: left;
+//   background-color: inherit;
+//   border-right: 1px solid;
+//   border-color: #d4d4d4;
+//   box-sizing: border-box;
+// }
 
 //my finances
 
