--- a/src/app/pages/configuration/company/legal/edit-bank-account.html
+++ b/src/app/pages/configuration/company/legal/edit-bank-account.html
@@ -1,4 +1,4 @@
-<div class="modal-content" ng-controller="bankAccountController">
+<div class="modal-content">
     <div class="modal-header bg-primary">
         <h3 class="inline-block clear-vertical-margin" data-ng-if="!ctrl.edit">Add Bank Account</h3>
         <h3 class="inline-block clear-vertical-margin" data-ng-if="ctrl.edit">Edit Bank Account</h3>
@@ -71,8 +71,8 @@
             <div class="row">
                 <div class="col-sm-12 vertical-margin">
                     <div class="col-sm-6 pull-right text-right">
-                        <button type="submit" data-ng-if="!ctrl.edit" class="btn btn-submit btn-success" data-ng-click="addBankAccount();">Add Account</button>
-                        <button type="submit" data-ng-if="ctrl.edit" class="btn btn-submit" data-ng-click="ctrl.updateBankAccount();">Update Account</button>
+                        <button type="submit" data-ng-if="!edit" class="btn btn-submit btn-success" data-ng-click="addBankAccount();">Add Account</button>
+                        <button type="submit" data-ng-if="edit" class="btn btn-submit" data-ng-click="addBankAccount();">Update Account</button>
                         <a class="btn btn-cancel" data-ng-click="$dismiss();">Cancel</a>
                     </div>
                 </div>
