--- a/src/app/pages/configuration/company/legal/edit-signatory.html
+++ b/src/app/pages/configuration/company/legal/edit-signatory.html
@@ -1,7 +1,7 @@
 <div class="modal-content">
     <div class="modal-header bg-primary">
-        <!-- <h3 class="inline-block clear-vertical-margin" data-ng-if="!edit">Add Signatory</h3>
-        <h3 class="inline-block clear-vertical-margin" data-ng-if="edit">Edit Signatory</h3> -->
+        <h3 class="inline-block clear-vertical-margin" data-ng-if="!edit">Add Signatory</h3>
+        <h3 class="inline-block clear-vertical-margin" data-ng-if="edit">Edit Signatory</h3>
     </div>
 
     <div class="modal-body content-container">
@@ -144,7 +144,8 @@
                     <div class="col-sm-12 vertical-margin">
                         <div class="col-sm-6 pull-right text-right">
                             <button type="submit" data-ng-if="!edit" class="btn btn-submit btn-primary" ng-click="saveSignatory();">Add Signatory</button>
-                            <button type="submit" data-ng-if="edit" class="btn btn-submit" data-ng-click="saveSignatory();">Update Signatory</button>
+                            <!-- <button type="submit" data-ng-if="edit" class="btn btn-submit" data-ng-click="saveSignatory();">Update Signatory</button> -->
+                            <button type="submit" ng-if="edit" class="btn btn-success" ng-click="saveSignatory();" dotranslate>Update Signatory</button>
                             <a class="btn btn-cancel" data-ng-click="$dismiss();">Cancel</a>
                         </div>
                     </div>
