--- a/src/app/pages/configuration/company/locations/branch/edit-branch.html
+++ b/src/app/pages/configuration/company/locations/branch/edit-branch.html
@@ -1,35 +1,27 @@
 <div class="modal-content">
     <div class="modal-header bg-primary">
-        <h3 class="inline-block clear-vertical-margin" ng-if="!isEdit" dotranslate>Add Sub-Unit</h3>
-        <h3 class="inline-block clear-vertical-margin" ng-if="isEdit" dotranslate>Edit Sub-Unit</h3>
+        <h3 class="inline-block clear-vertical-margin" ng-if="!isEdit" dotranslate>Add Branch</h3>
+        <h3 class="inline-block clear-vertical-margin" ng-if="isEdit" dotranslate>Edit Branch</h3>
     </div>
 
     <div class="modal-body content-container">
-        <form name="subUnitDetail" id="subUnitDetail" novalidate>
+        <form name="branchDetail" id="branchDetail" novalidate>
             <div class="row">
 
                 <div class="col-sm-12 clear-left-padding">
                     <div class="col-sm-8">
                         <div class="form-group">
                             <label dotranslate>Location</label>
-                            <select class="form-control" name="LocationId" ng-options="opt.value as opt.name for opt in selects.LocationId" ng-model="entity.LocationId"></select>
+                            <select class="form-control" name="BRLocationId" ng-options="opt.value as opt.name for opt in selects.BRLocationId" ng-change="changeState()"
+                                ng-model="entity.BRLocationId"></select>
                         </div>
                     </div>
                 </div>
                 <div class="col-sm-12 clear-left-padding">
                     <div class="col-sm-8">
                         <div class="form-group">
-                            <label dotranslate>Branch</label>
-                            <select class="form-control" name="SUBranchId" ng-options="opt.value as opt.name for opt in selects.SUBranchId"
-                                ng-model="entity.SUBranchId"></select>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-sm-12 clear-left-padding">
-                    <div class="col-sm-8">
-                        <div class="form-group">
-                            <label dotranslate>Name Of SubUnit</label>
-                            <input type="text" class="form-control" ng-model="entity.SUName" name="SUName" id="SUName" required />
+                            <label dotranslate>Name of Branch</label>
+                            <input type="text" class="form-control" ng-model="entity.BRName" name="BranchName" id="BranchName" required />
 
                             <span class="validation-msg" validation-messages="" model-controller="bankDetails.bank" required-error="Name is required"
                                 form-submit="bankDetails.$submitted"></span>
