--- a/src/app/pages/leave/masters/list/mastersList.html
+++ b/src/app/pages/leave/masters/list/mastersList.html
@@ -203,7 +203,7 @@
                             </div>
                         </form>
                     </ba-wizard-step>
-                    <ba-wizard-step title="Finish">
+                    <ba-wizard-step title="Finish" form="vm.addressForm">
                         <form class="form-horizontal" name="vm.finishForm" novalidate>
                             <div class="row">
 
