--- a/src/app/pages/configuration/configure.html
+++ b/src/app/pages/configuration/configure.html
@@ -5,7 +5,7 @@
                 <ul class="nav">
 
                     <li id="previous-state">
-                        <a class="previous-state pull-left" href ng-click="goToPreviousState()">
+                        <a class="previous-state pull-left" href ng-click="$baSidebarService.setMenuCollapsed(false);$state.go('selfdashboard');">
                             <i class="fa fa-arrow-circle-left"></i>Back
                         </a>
                     </li> 
