--- a/src/sass/theme/_djMain.scss
+++ b/src/sass/theme/_djMain.scss
@@ -360,6 +360,15 @@ input:focus, select:foucs {
 .strikethrough{
   text-decoration:line-through;
 }
+.modal .modal-dialog.modal-full-screen
+{
+  position: fixed;
+  margin: 0;
+  width: 100%;
+  height: 100%;
+  padding: 0;
+  top:0px;
+}
 .modal .modal-dialog.modal-top-center-500
 {
   width: 600px;
