--- a/src/app/pages/payrollprocess/overview/overview.html
+++ b/src/app/pages/payrollprocess/overview/overview.html
@@ -113,7 +113,7 @@
                                     <div class="col-sm-1 alert-icon clear-side-padding">
                                         <span class="icon-file-check"></span>
                                     </div>
-                                    <div class="action col-sm-10 text-content clear-side-padding">
+                                    <div ng-click="CheckLeaveAndAttendanceStatus()" class="action col-sm-10 text-content clear-side-padding">
                                         <h4>Leave &amp; Attendance </h4>
                                         <!-- ngIf: !vm.currentcycle.details.actions.leavesAndAttendance.isReviewed() -->
                                         <p class="clear-vertical-margin ">No action taken</p>
