--- a/src/sass/theme/_empMain.scss
+++ b/src/sass/theme/_empMain.scss
@@ -1125,7 +1125,7 @@ textarea.form-control {
   vertical-align: middle;
 
 }
-input[type=checkbox]:checked+.radio-overlay:before, input[type=radio]:checked+.radio-overlay:before {
+ input[type=radio]:checked+.radio-overlay:before {
   content: " ";
   width: 12px;
   height: 12px;
@@ -1137,7 +1137,7 @@ input[type=checkbox]:checked+.radio-overlay:before, input[type=radio]:checked+.r
   position: absolute;
 }
 
-input[type=checkbox], input[type=radio],input[type=file] {
+ input[type=radio],input[type=file] {
     display: none;
 }
 .radio label{
@@ -1533,17 +1533,17 @@ p {
 .expense-details-container h2 {
   color: #666;
 }
-.expense-check-box input[type=checkbox], .expense-details-container .claim-detail input[type=checkbox], .expense-details-container .expense-detail input[type=checkbox] {
-  display: block;
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  height: 20px;
-  width: 20px;
-  border: 1px solid #d5d5d5;
-  border-radius: 2px;
-  position: relative;
-  cursor: pointer;
-}
+// .expense-check-box input[type=checkbox], .expense-details-container .claim-detail input[type=checkbox], .expense-details-container .expense-detail input[type=checkbox] {
+//   display: block;
+//   -webkit-appearance: none;
+//   -moz-appearance: none;
+//   height: 20px;
+//   width: 20px;
+//   border: 1px solid #d5d5d5;
+//   border-radius: 2px;
+//   position: relative;
+//   cursor: pointer;
+// }
 .expense-details-container .claims-btn {
   margin-top: 22px;
   margin-left: 15px;
@@ -1563,15 +1563,15 @@ p {
   font-size: 32px;
   margin-bottom: 5px;
 }
-.expense-check-box input[type=checkbox]:checked:after, .expense-details-container .claim-detail input[type=checkbox]:checked:after, .expense-details-container .expense-detail input[type=checkbox]:checked:after {
-  content: ' ';
-  width: 12px;
-  height: 12px;
-  background-color: #3d9eed;
-  position: absolute;
-  top: 3px;
-  left: 3px;
-}
+// .expense-check-box input[type=checkbox]:checked:after, .expense-details-container .claim-detail input[type=checkbox]:checked:after, .expense-details-container .expense-detail input[type=checkbox]:checked:after {
+//   content: ' ';
+//   width: 12px;
+//   height: 12px;
+//   background-color: #3d9eed;
+//   position: absolute;
+//   top: 3px;
+//   left: 3px;
+// }
 .text-bold {
   font-weight: 600;
 }
@@ -1757,3 +1757,19 @@ p {
   left: 50%;
   top: 0;
 }
+
+/* form styling */
+#form-container                { background:#2f2f2f; margin-bottom:20px;
+  border-radius:5px; }
+#form-container .page-header   { background:#151515; margin:0; padding:30px; 
+  border-top-left-radius:5px; border-top-right-radius:5px; }
+
+/* numbered buttons */
+
+#status-buttons a               { color:#FFF; display:inline-block; font-size:12px; margin-right:10px; text-align:center; text-transform:uppercase; }
+#status-buttons a:hover         { text-decoration:none; }
+#status-buttons span            { background:#080808; display:block; height:30px; margin:0 auto 10px; padding-top:5px; width:30px; 
+  border-radius:50%; }
+
+/* active buttons */
+#status-buttons a.active span   { background:#00BC8C; }
